Create Gallery separate page, update style

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <ol class="nav-list" id="top">
             <li class="nav-list-item"><a href="#intro"><font INTRO ></a></li>
             <li class="nav-list-item"><a href="#chronometr">MAIN TOPICS ></a></li>
-            <li class="nav-list-item"><a href="#gallery">GALLERY ></a></li>
+            <li class="nav-list-item"><a href="gallery.html">GALLERY ></a></li>
             <li class="nav-list-item"><a href="#feedback">FEEDBACK ></a></li>
         </ol>        
     </nav>
