finish extra-reading section

--- a/assets/html/gallery.html
+++ b/assets/html/gallery.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Gallety</title>
-    <link rel="stylesheet" href="./assets/css/style.css" />
+    <link rel="stylesheet" href="../css/style.css" />
     <style>
       body,
       html {
         height: 100%;
       }
       .bg {
-        background-image: url("./assets/images/gallery-background.jpg");
+        background-image: url("../images/gallery-background.jpg");
         height: 100%;
         background-position: center;
         background-repeat: no-repeat;
@@ -36,9 +36,9 @@
     <div class="bg">
       <span class="responsive">
         <div class="gallery">
-          <a target="_blank" href="./assets/images/chronometer-gallery.jpg">
+          <a target="_blank" href="../images/chronometer-gallery.jpg">
             <img
-              src="./assets/images/chronometer-gallery.jpg"
+              src="../images/chronometer-gallery.jpg"
               alt="Marine Chronometer"
               width="600"
               height="400"
@@ -51,9 +51,9 @@
       </span>
       <span class="responsive">
         <div class="gallery">
-          <a target="_blank" href="./assets/images/toothbrush-gallery.jpg">
+          <a target="_blank" href="../images/toothbrush-gallery.jpg">
             <img
-              src="./assets/images/toothbrush-gallery.jpg"
+              src="../images/toothbrush-gallery.jpg"
               alt="Vintage Toothbrushes"
               width="600"
               height="400"
@@ -69,9 +69,9 @@
 
       <span class="responsive">
         <div class="gallery">
-          <a target="_blank" href="./assets/images/pears_soap-gallery.jpg">
+          <a target="_blank" href="../images/pears_soap-gallery.jpg">
             <img
-              src="./assets/images/pears_soap-gallery.jpg"
+              src="../images/pears_soap-gallery.jpg"
               alt="Pear's Soup Advertisement"
               width="600"
               height="400"
@@ -88,10 +88,10 @@
         <div class="gallery">
           <a
             target="_blank"
-            href="./assets/images/pencil_notetaking-gallery.jpg"
+            href="../images/pencil_notetaking-gallery.jpg"
           >
             <img
-              src="./assets/images/pencil_notetaking-gallery.jpg"
+              src="../images/pencil_notetaking-gallery.jpg"
               alt="Pen Notetaking"
               width="600"
               height="400"
@@ -107,9 +107,9 @@
 
       <span class="responsive">
         <div class="gallery">
-          <a target="_blank" href="./assets/images/viltaic_pile-gallery.jpg">
+          <a target="_blank" href="../images/viltaic_pile-gallery.jpg">
             <img
-              src="./assets/images/viltaic_pile-gallery.jpg"
+              src="../images/viltaic_pile-gallery.jpg"
               alt="Voltaic Pile"
               width="600"
               height="400"
