--- a/assets/html/toothbrush-extra.html
+++ b/assets/html/toothbrush-extra.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Marine Chronometer</title>
+    <title>Toothbrush</title>
     <link rel="stylesheet" href="../css/style.css">
     <style>
         body, html {
@@ -12,13 +12,12 @@
       }      
     </style>
 </head>
-<body>
-    
+<body>    
     <div class="bg-extra">
-        <h1 class="extra-story-title">Marine Chronometer - extra story.</h1>
+        <h1 class="extra-story-title">Toothbrush - extra story.</h1>
         <br>
         <br>
-        <center><img src="../images/chronometer-1.png" alt="Captain Cook Experiencce article" width="700px" height="auto"></center>
+        <center><img src="../images/toothbrush-1.png" alt="Captain Cook Experiencce article" width="350px" height="auto"></center>
     </div>
 
     
