--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
         </p>
         <a href="https://en.wikipedia.org/wiki/John_Harrison" target="_blank">Inventor (Wiki)</a>
         <a href="https://en.wikipedia.org/wiki/Marine_chronometer" target="_blank">Artefact (Wiki)</a>
+        <a href="./assets/html/chronometer-extra.html" target="=blank">Extra reading</a>
         <h6><a href="#top">TOP</a></h6>
         </div>
     <hr>
@@ -85,6 +86,7 @@
         </p>
         <a href="https://en.wikipedia.org/wiki/William_Addis_(entrepreneur)" target="_blank">Inventor (Wiki)</a>
         <a href="https://en.wikipedia.org/wiki/Toothbrush" target="_blank">Artefact (Wiki)</a>
+        <a href="./assets/html/toothbrush-extra.html" target="=blank">Extra reading</a>
         <h6><a href="#top">TOP</a></h6>
     </div>
     <hr>
@@ -95,6 +97,7 @@
         </p>
                 <a href="https://en.wikipedia.org/wiki/Andrew_Pears" target="_blank">Inventor (Wiki)</a>
                 <a href="https://en.wikipedia.org/wiki/Soap" target="_blank">Artefact (Wiki)</a>
+                <a href="./assets/html/soap-extra.html" target="=blank">Extra reading</a>
                 <h6><a href="#top">TOP</a></h6>
 
     </div>
@@ -106,6 +109,7 @@
         </p>
         <a href="https://en.wikipedia.org/wiki/Nicolas-Jacques_Cont%C3%A9" target="_blank">Inventor (Wiki)</a>
         <a href="https://en.wikipedia.org/wiki/Pencil" target="_blank">Inventor (Wiki)</a>
+        <a href="./assets/html/pencil-extra.html" target="=blank">Extra reading</a>
         <h6><a href="#top">TOP</a></h6>
         
     </div>        
@@ -117,6 +121,7 @@
         </p>
         <a href="https://en.wikipedia.org/wiki/Alessandro_Volta" target="_blank">Inventor (Wiki)</a>
         <a href="https://en.wikipedia.org/wiki/Electric_battery" target="_blank">Artefact (Wiki)</a>
+        <a href="./assets/html/Battery-extra.html" target="=blank">Extra reading</a>
         <h6><a href="#top">TOP</a></h6>
     </div>
     <hr>
