--- a/assets/html/soap-extra.html
+++ b/assets/html/soap-extra.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Marine Chronometer</title>
+    <title>Modern Soap</title>
     <link rel="stylesheet" href="../css/style.css">
     <style>
         body, html {
@@ -15,12 +15,12 @@
 <body>
     
     <div class="bg-extra">
-        <h1 class="extra-story-title">Marine Chronometer - extra story.</h1>
-        <br>
-        <br>
-        <center><img src="../images/chronometer-1.png" alt="Captain Cook Experiencce article" width="700px" height="auto"></center>
-    </div>
-
-    
+        <h1 class="extra-story-title">Modern soap - extra story.</h1>
+        <center>
+            <span><img src="../images/soap-2.png" alt="Modern Soap" width="500px" height="auto"></span>
+            <br>
+            <span><img src="../images/soap-1.png" alt="Modern Soap" width="300px" height="auto"></span>
+        </center>
+    </div>    
 </body>
 </html>
