Update front page, fix links between pages

--- a/assets/html/gallery.html
+++ b/assets/html/gallery.html
@@ -21,15 +21,15 @@
         font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
       }
       footer {
-  position: fixed;
-  left: 0;
-  bottom: 0;
-  width: 100%;
-  color: black;
-  text-align: right;
-  padding-right: 20px;
-  padding-left: 400px;
-}
+        position: fixed;
+        left: 0;
+        bottom: 0;
+        width: 100%;
+        color: black;
+        text-align: right;
+        padding-right: 20px;
+        padding-left: 400px;
+      }
     </style>
   </head>
   <body>
@@ -86,10 +86,7 @@
 
       <span class="responsive">
         <div class="gallery">
-          <a
-            target="_blank"
-            href="../images/pencil_notetaking-gallery.jpg"
-          >
+          <a target="_blank" href="../images/pencil_notetaking-gallery.jpg">
             <img
               src="../images/pencil_notetaking-gallery.jpg"
               alt="Pen Notetaking"
@@ -123,13 +120,14 @@
         </div>
       </span>
       <footer>
-      <h3>
-        Page background: Industrial urban landscape <em>by Trevor Grimshaw</em>.<br>
-        From the collection of <em>Clark Art Ltd</em>. Features the new look,
-        spirit and spectacular changes brought by the
-        <em>Industrial Revolution</em> into a traditional environment...
-      </h3>
-    </footer>
+        <h3>
+          Page background: Industrial urban landscape
+          <em>by Trevor Grimshaw</em>.<br />
+          From the collection of <em>Clark Art Ltd</em>. Features the new look,
+          spirit and spectacular changes brought by the
+          <em>Industrial Revolution</em> into a traditional environment...
+        </h3>
+      </footer>
     </div>
   </body>
 </html>
