--- a/assets/html/pencil-extra.html
+++ b/assets/html/pencil-extra.html
@@ -15,11 +15,11 @@
 <body>
     
     <div class="bg-extra">
-        <h1 class="extra-story-title">Modern soap - extra story.</h1>
+        <h1 class="extra-story-title">Pencil - extra story.</h1>
         <center>
-            <span><img src="../images/soap-2.png" alt="Modern Soap" width="500px" height="auto"></span>
+            <span><img src="../images/pencil-1.png" alt="Pencil story - 1" width="400px" height="auto"></span>
             <br>
-            <span><img src="../images/soap-1.png" alt="Modern Soap" width="300px" height="auto"></span>
+            <span><img src="../images/penil-2.png" alt="Pencil story - 2" width="800px" height="auto"></span>
         </center>
     </div>    
 </body>
