--- a/assets/html/toothbrush-extra.html
+++ b/assets/html/toothbrush-extra.html
@@ -17,7 +17,7 @@
         <h1 class="extra-story-title">Toothbrush - extra story.</h1>
         <br>
         <br>
-        <center><img src="../images/toothbrush-1.png" alt="Captain Cook Experiencce article" width="350px" height="auto"></center>
+        <center><img src="../images/toothbrush-1.png" alt="Toothbrush" width="450px" height="auto"></center>
     </div>
 
     
