--- a/assets/html/battery-extra.html
+++ b/assets/html/battery-extra.html
@@ -18,8 +18,8 @@
         <h1 class="extra-story-title">William Nicholson (1753-1815). Batteries and electrochemical contributions.</h1>
         <br>
         <center>
-            <span><img src="../images/William_Nicholson-extra-1.jpg" alt="Modern Soap" width="450px" height="auto"></span>
-            <span><img src="../images/William_Nicholson-extra-2.jpg" alt="Battery" width="300px" height="auto"></span>
+            <span><img src="../images/William_Nicholson-extra-1.jpg" alt="William Nicholson - note" width="450px" height="auto"></span>
+            <span><img src="../images/William_Nicholson-extra-2.jpg" alt="William Nicholson - portrait" width="300px" height="auto"></span>
         </center>
     </div>    
 </body>
