--- a/assets/html/soap-extra.html
+++ b/assets/html/soap-extra.html
@@ -1,26 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Modern Soap</title>
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../css/style.css" />
     <style>
-        body, html {
+      body,
+      html {
         height: 100%;
-      }      
+      }
     </style>
-</head>
-<body>
-    
+  </head>
+  <body>
     <div class="bg-extra">
-        <h1 class="extra-story-title">Modern soap - extra story.</h1>
-        <center>
-            <span><img src="../images/soap-2.png" alt="Modern Soap" width="500px" height="auto"></span>
-            <br>
-            <span><img src="../images/soap-1.png" alt="Modern Soap" width="300px" height="auto"></span>
-        </center>
-    </div>    
-</body>
+      <h1 class="extra-story-title">Modern soap - extra story.</h1>
+      <center>
+        <span>
+            <img src="../images/soap-2.png" alt="Modern Soap" width="500px" height="auto">
+        </span>
+        <br />
+        <span>
+            <img src="../images/soap-1.png" alt="Modern Soap" width="300px" height="auto">
+        </span>
+      </center>
+    </div>
+  </body>
 </html>
