Initial html validation

--- a/assets/html/chronometer-extra.html
+++ b/assets/html/chronometer-extra.html
@@ -2,25 +2,19 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Marine Chronometer</title>
-    <link rel="stylesheet" href="../css/style.css">
-    <style>
-        body, html {
-        height: 100%;
-      }      
+    <title>Marine chronometer</title>
+    <link href="../CSS/style.css" rel="stylesheet">
+    <style>        
+        #vertical {
+            margin-top: 80px;
+        }
     </style>
 </head>
-<body>
-    
-    <div class="bg-extra">
-        <h1 class="extra-story-title">Marine Chronometer - extra story.</h1>
-        <br>
-        <br>
-        <center><img src="../images/chronometer-1.png" alt="Captain Cook Experiencce article" width="700px" height="auto"></center>
-    </div>
-
+<body class="bg-extra">
+    <p class="head-extra">Marine Chronometer - extra story.</p>
+    <br>    
+    <img src="../images/chronometer-1.png" alt="Marine chronometer - The captain Cook experience" class="center" id="vertical" width="800">
     
 </body>
 </html>
