--- a/assets/html/soap-extra.html
+++ b/assets/html/soap-extra.html
@@ -1,30 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Modern Soap</title>
-    <link rel="stylesheet" href="../css/style.css" />
+    <link href="../CSS/style.css" rel="stylesheet">
     <style>
-      body,
-      html {
-        height: 100%;
-      }
+        #vertical {
+            margin-top: 30px;
+        }
     </style>
-  </head>
-  <body>
-    <div class="bg-extra">
-      <h1 class="extra-story-title">Modern soap - extra story.</h1>
-      <center>
-        <span>
-            <img src="../images/soap-2.png" alt="Modern Soap" width="500px" height="auto">
-        </span>
-        <br />
-        <span>
-            <img src="../images/soap-1.png" alt="Modern Soap" width="300px" height="auto">
-        </span>
-      </center>
-    </div>
-  </body>
+</head>
+<body class="bg-extra">
+    <p class="head-extra">Soap as we know it - extra story.</p>
+    <br>
+    <img src="../images/soap-1.png" alt="Modern Soap - extra story" class="center" id="vertical" width="650">
+    <img src="../images/soap-2.png" alt="Modern Soap - extra story" class="center" width="310" style="margin-top: 5px;">
+    
+</body>
 </html>
