--- a/assets/html/battery-extra.html
+++ b/assets/html/battery-extra.html
@@ -2,25 +2,19 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Battery</title>
-    <link rel="stylesheet" href="../css/style.css">
+    <title>Pencil</title>
+    <link href="../CSS/style.css" rel="stylesheet">
     <style>
-        body, html {
-        height: 100%;
-      }      
+        #vertical {
+            margin-top: 60px;
+        }
     </style>
 </head>
-<body>
-    
-    <div class="bg-extra">
-        <h1 class="extra-story-title">William Nicholson (1753-1815). Batteries and electrochemical contributions.</h1>
-        <br>
-        <center>
-            <span><img src="../images/William_Nicholson-extra-1.jpg" alt="William Nicholson - note" width="450px" height="auto"></span>
-            <span><img src="../images/William_Nicholson-extra-2.jpg" alt="William Nicholson - portrait" width="300px" height="auto"></span>
-        </center>
-    </div>    
+<body class="bg-extra">
+    <p class="head-extra">Battery - extra story.</p>    
+    <img src="../images/William_Nicholson-extra-1.jpg" alt="Battery - extra story of William Nicholson" id="vertical" width="560" style="padding-left: 230px; padding-right: 20px;">
+    <img src="../images/William_Nicholson-extra-2.jpg" alt="Battery - extra story of William Nicholson" width="400" style="margin-top: 10px;">
+    <p style="text-align: center; font-weight: bold; margin-left: 900px; margin-right: 200px; background-color: blanchedalmond; font-size: 25px;">Figure 1.</p>
 </body>
 </html>
