--- a/assets/html/pencil-extra.html
+++ b/assets/html/pencil-extra.html
@@ -2,25 +2,20 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Modern Soap</title>
-    <link rel="stylesheet" href="../css/style.css">
+    <title>Pencil</title>
+    <link href="../CSS/style.css" rel="stylesheet">
     <style>
-        body, html {
-        height: 100%;
-      }      
+        #vertical {
+            margin-top: 50px;
+        }
     </style>
 </head>
-<body>
+<body class="bg-extra">
+    <p class="head-extra">Pencil - extra story.</p>
+    <br>
+    <img src="../images/pencil-1.png" alt="Pencil - extra story" class="center" id="vertical" width="400">
+    <img src="../images/pencil-2.png" alt="Pencil - extra story" class="center" width="800" style="margin-top: 10px;">
     
-    <div class="bg-extra">
-        <h1 class="extra-story-title">Pencil - extra story.</h1>
-        <center>
-            <span><img src="../images/pencil-1.png" alt="Pencil story - 1" width="400px" height="auto"></span>
-            <br>
-            <span><img src="../images/penil-2.png" alt="Pencil story - 2" width="800px" height="auto"></span>
-        </center>
-    </div>    
 </body>
 </html>
