--- a/assets/html/toothbrush-extra.html
+++ b/assets/html/toothbrush-extra.html
@@ -2,24 +2,19 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Toothbrush</title>
-    <link rel="stylesheet" href="../css/style.css">
+    <link href="../CSS/style.css" rel="stylesheet">
     <style>
-        body, html {
-        height: 100%;
-      }      
+        #vertical {
+            margin-top: 80px;
+        }
     </style>
 </head>
-<body>    
-    <div class="bg-extra">
-        <h1 class="extra-story-title">Toothbrush - extra story.</h1>
-        <br>
-        <br>
-        <center><img src="../images/toothbrush-1.png" alt="Toothbrush" width="450px" height="auto"></center>
-    </div>
-
+<body class="bg-extra">
+    <p id="head-extra">Toothbrush - extra story.</p>
+    <br>
+    <img src="../images/toothbrush-1.png" alt="Toothbrush - extra story" class="center" id="vertical" width="500">
     
 </body>
 </html>
