Validate, Lighthouse test

--- a/assets/html/battery-extra.html
+++ b/assets/html/battery-extra.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pencil</title>
-    <link href="../CSS/style.css" rel="stylesheet">
+    <link href="../css/style.css" rel="stylesheet">
     <style>
         #vertical {
             margin-top: 60px;
@@ -12,9 +12,8 @@
     </style>
 </head>
 <body class="bg-extra">
-    <p class="head-extra">Battery - extra story.</p>    
-    <img src="../images/William_Nicholson-extra-1.jpg" alt="Battery - extra story of William Nicholson" id="vertical" width="560" style="padding-left: 230px; padding-right: 20px;">
-    <img src="../images/William_Nicholson-extra-2.jpg" alt="Battery - extra story of William Nicholson" width="400" style="margin-top: 10px;">
-    <p style="text-align: center; font-weight: bold; margin-left: 900px; margin-right: 200px; background-color: blanchedalmond; font-size: 25px;">Figure 1.</p>
+    <p class="head-extra">Battery - extra story.</p>
+    <br>
+    <img src="../images/William_Nicholson-extra-1.jpg" alt="Battery - extra story of William Nicholson" class="center" id="vertical" width="560">
 </body>
 </html>
