--- a/assets/html/soap-extra.html
+++ b/assets/html/soap-extra.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Modern Soap</title>
-    <link href="../CSS/style.css" rel="stylesheet">
+    <link href="../css/style.css" rel="stylesheet">
     <style>
         #vertical {
             margin-top: 30px;
