--- a/assets/html/toothbrush-extra.html
+++ b/assets/html/toothbrush-extra.html
@@ -1,20 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Toothbrush</title>
-    <link href="../CSS/style.css" rel="stylesheet">
+    <link href="../css/style.css" rel="stylesheet" />
     <style>
-        #vertical {
-            margin-top: 80px;
-        }
+      #vertical {
+        margin-top: 80px;
+      }
     </style>
-</head>
-<body class="bg-extra">
-    <p id="head-extra">Toothbrush - extra story.</p>
-    <br>
-    <img src="../images/toothbrush-1.png" alt="Toothbrush - extra story" class="center" id="vertical" width="500">
-    
-</body>
+  </head>
+  <body class="bg-extra">
+    <p class="head-extra">Toothbrush - extra story.</p>
+    <br />
+    <img
+      src="../images/toothbrush-1.png"
+      alt="Toothbrush - extra story"
+      class="center"
+      id="vertical"
+      width="500"
+    />
+  </body>
 </html>
