Add comments, update Acknowledgement section of README.md, fix tab titles. Submission-ready.

--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<!--Project: History of Technology. Period: Industrial Revolution-->
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -7,6 +8,7 @@
     <title>Industrial Revolution Inventions</title>
 
     <link rel="stylesheet" href="./assets/css/style.css" />
+    <!--Styling of the page-->
     <style>
       .enlarged-icon:hover {
         width: 300px;
@@ -21,7 +23,7 @@
         color: white;
         padding-left: 10%;
       }
-
+/*Media query*/
       @media only screen and (max-width: 600px) {
         .responsive {
           width: 84.99999%;
@@ -32,6 +34,7 @@
     </style>
   </head>
   <body>
+    <!--Top navigation bar-->
     <nav>
       <ol class="nav-list" id="top">
         <li class="nav-list-item"><a href="#intro">INTRO ></a></li>
@@ -56,6 +59,7 @@
     </header>
 
     <h1 id="intro">All those things we take for granted...</h1>
+    <!--Introduction-->
     <h2>Introduction</h2>
     <div
       style="color: black; font-size: 1.2rem; text-shadow: 1px 1px slategray"
@@ -436,6 +440,7 @@
       >
       <h6><a href="#top">TOP</a></h6>
     </div>
+    <!--Feedback form-->
     <div id="feedback">
       <form action="https://formdump.codeinstitute.net/" method="post">
         <fieldset>
