--- a/assets/html/pencil-extra.html
+++ b/assets/html/pencil-extra.html
@@ -1,21 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Pencil</title>
-    <link href="../css/style.css" rel="stylesheet">
+    <link href="../css/style.css" rel="stylesheet" />
     <style>
-        #vertical {
-            margin-top: 50px;
-        }
+      #vertical {
+        margin-top: 50px;
+      }
     </style>
-</head>
-<body class="bg-extra">
+  </head>
+  <body class="bg-extra">
     <p class="head-extra">Pencil - extra story.</p>
-    <br>
-    <img src="../images/pencil-1.png" alt="Pencil - extra story" class="center" id="vertical" width="400">
-    <img src="../images/pencil-2.png" alt="Pencil - extra story" class="center" width="800" style="margin-top: 10px;">
-    
-</body>
+    <br />
+    <img
+      src="../images/pencil-1.png"
+      alt="Pencil - extra story"
+      class="center"
+      id="vertical"
+      width="450"
+    />
+  </body>
 </html>
